<resources>
    <string name="app_name">FundamentosAndroid</string>
    <string name="article_image_desc">Prueba String</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="incorrect_credentials">Usuario o contraseña incorrecta.</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="volver">Volver</string>
    <string name="goku">Goku</string>
    <string name="hp">HP</string>
    <string name="_100">100%</string>
    <string name="curar">Curar</string>
    <string name="atacar">Atacar!!</string>
    <string name="descripci_n">Descripción</string>
    <string name="textview">TextView</string>
    <string name="recargar">TODO</string>
</resources>