<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".heroes.herodetail.HeroDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/volver" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/goku"
                android:textColor="@color/orange"
                android:textSize="36sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_margin="20dp"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView2"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/hp"
                        android:textSize="26sp" />

                    <TextView
                        android:id="@+id/tvHP"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/_100"
                        android:textSize="48sp"
                        android:textStyle="bold" />

                    <ProgressBar
                        android:id="@+id/progressBar3"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:progress="80"
                        android:progressBackgroundTint="@color/dark_red"
                        android:progressTint="@color/health_100_81" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonAdd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/health_100_81"
                    android:drawableLeft="@drawable/ic_health"
                    android:drawableRight="@drawable/ic_health"
                    android:elevation="4dp"
                    android:stateListAnimator="@null"
                    android:paddingStart="26dp"
                    android:paddingEnd="26dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/curar"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/buttonDamage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:drawableLeft="@drawable/ic_attack"
                    android:drawableRight="@drawable/ic_attack"
                    android:elevation="4dp"
                    android:stateListAnimator="@null"
                    android:paddingStart="19dp"
                    android:paddingEnd="19dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/atacar"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvBio"
                    android:layout_width="183dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:fontFamily="@font/matisan"
                    android:gravity="center"
                    android:text="@string/descripci_n"
                    android:textColor="@color/orange"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="89dp"
                    android:src="@mipmap/bg_fight" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvDesc"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/textview"
                android:textSize="18sp" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>