<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundinit"
    android:padding="20dp"
    tools:context=".login.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:src="@drawable/title" />


    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:alpha="0.7"
        android:background="@drawable/edittext_custom"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_custom"
        android:alpha="0.7"
        android:textSize="20sp"
        android:padding="16dp"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/login"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        android:padding="16dp"
        android:backgroundTint="@color/darkorange"
        />

</LinearLayout>